<resources>
    <string name="app_name">frapuse</string>
    <string name="app_description">In this application you can create images, chat and interact with documents using AI</string>

    <string name="text_to_image">Text To Image</string>
    <string name="text_to_text">Text To Text</string>
    <string name="chat">chat</string>

    <string name="generate">generate</string>
    <string name="reset">reset</string>

    <string name="save_button">save button</string>
    <string name="back_button">back button</string>
    <string name="send_button">send button</string>
    <string name="generate_button">generate button</string>
    <string name="settings_button">settings button</string>

    <string name="info">Info…</string>
    <string name="instruction_chat">INSTRUCTION CHAT</string>
    <string name="settings">Settings</string>

    <string name="prompt">PROMPT</string>
    <string name="negative_prompt">NEGATIVE PROMPT</string>

    <string name="steps">STEPS</string>
    <string name="steps_value">20</string>

    <string name="width">WIDTH</string>

    <string name="height">HEIGHT</string>
    <string name="height_width_value">512</string>

    <string name="model">MODEL</string>

    <string name="cfg">CFG</string>
    <string name="cfg_value">7.0</string>

    <string name="sampler">SAMPLER</string>
    <string name="sampler_value">Euler a</string>

    <string name="seed">SEED</string>
    <string name="seed_value">-1</string>

    <string name="nav_to_rv">Tap and hold to open\nthe image library!</string>

    <string name="text_to_text_block">block</string>
    <string name="text_to_text_stream">stream</string>
    <string name="chat_ai">AI:</string>
    <string name="chat_human">Human:</string>
    <string name="instructions">Instructions:</string>
    <string name="tokens">Tokens:</string>

    <string name="start_operation">Start Operation</string>
    <string name="document_operation">Document Operation</string>
    <string name="document_search">Document Search</string>
    <string name="extensions">Extensions:</string>
    <string name="parameters">Parameters:</string>
    <string name="response_size">RESPONSE SIZE</string>
    <string name="responses">Responses:</string>
    <string name="response_block">Block</string>
    <string name="response_stream">Stream</string>
    <string name="instruction_db_agent">INSTRUCTION DB AGENT</string>
    <string name="instructions_after_db_agent">INSTRUCTION CHAT AFTER DB AGENT</string>
    <string name="new_max_tokens">New Max Tokens</string>
    <string name="temparature">Temparature</string>
    <string name="frappante_muse">FRAPPANTE\nMUSE</string>
    <string name="your_ai_companion">YOUR\nAI\nCOMPANION</string>


</resources>