<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_text_to_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedCorners"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:contentDescription="todo"
            android:src="@drawable/square_and_arrow_up_purple"
            android:visibility="gone"
            app:backgroundTint="@color/dark_grey"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@id/cl_info_plate"
            app:layout_constraintEnd_toEndOf="@+id/iv_text_to_image" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_info_plate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt"
                app:layout_constraintEnd_toEndOf="@+id/tv_negative_prompt"
                app:layout_constraintTop_toTopOf="@id/cl_info_plate" />

            <TextView
                android:id="@+id/tv_prompt_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_negative_prompt_value"
                app:layout_constraintEnd_toEndOf="@id/cl_info_plate"
                app:layout_constraintStart_toEndOf="@+id/tv_prompt"
                app:layout_constraintTop_toTopOf="@id/cl_info_plate"
                tools:text="@string/prompt" />

            <TextView
                android:id="@+id/tv_negative_prompt"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/negative_prompt"
                app:layout_constraintEnd_toStartOf="@+id/tv_negative_prompt_value"
                app:layout_constraintStart_toStartOf="@id/cl_info_plate"
                app:layout_constraintTop_toBottomOf="@+id/tv_prompt_value" />

            <TextView
                android:id="@+id/tv_negative_prompt_value"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:ellipsize="end"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/tv_model_value"
                app:layout_constraintEnd_toEndOf="@+id/tv_prompt_value"
                app:layout_constraintStart_toEndOf="@+id/tv_negative_prompt"
                app:layout_constraintTop_toBottomOf="@+id/tv_prompt_value"
                tools:text="@string/negative_prompt" />

            <TextView
                android:id="@+id/tv_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model"
                app:layout_constraintEnd_toEndOf="@+id/tv_negative_prompt"
                app:layout_constraintTop_toBottomOf="@+id/tv_negative_prompt_value" />

            <TextView
                android:id="@+id/tv_model_value"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:ellipsize="end"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/tv_seed_value"
                app:layout_constraintEnd_toEndOf="@+id/tv_negative_prompt_value"
                app:layout_constraintStart_toStartOf="@+id/tv_prompt_value"
                app:layout_constraintTop_toBottomOf="@+id/tv_negative_prompt_value"
                tools:text="@string/model" />

            <TextView
                android:id="@+id/tv_seed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seed"
                app:layout_constraintEnd_toEndOf="@+id/tv_negative_prompt"
                app:layout_constraintTop_toBottomOf="@+id/tv_model_value" />

            <TextView
                android:id="@+id/tv_seed_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/tv_height_value"
                app:layout_constraintEnd_toEndOf="@+id/tv_model_value"
                app:layout_constraintStart_toStartOf="@+id/tv_prompt_value"
                app:layout_constraintTop_toBottomOf="@+id/tv_model_value"
                tools:text="@string/seed_value" />

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                app:layout_constraintEnd_toEndOf="@+id/tv_negative_prompt"
                app:layout_constraintTop_toBottomOf="@+id/tv_seed_value" />

            <TextView
                android:id="@+id/tv_height_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_width_value"
                app:layout_constraintEnd_toEndOf="@+id/tv_seed_value"
                app:layout_constraintStart_toEndOf="@+id/tv_negative_prompt"
                app:layout_constraintTop_toBottomOf="@+id/tv_seed_value"
                tools:text="@string/height_width_value" />

            <TextView
                android:id="@+id/tv_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/width"
                app:layout_constraintEnd_toEndOf="@+id/tv_negative_prompt"
                app:layout_constraintTop_toBottomOf="@+id/tv_height_value" />

            <TextView
                android:id="@+id/tv_width_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_sampler_value"
                app:layout_constraintEnd_toEndOf="@+id/tv_height_value"
                app:layout_constraintStart_toEndOf="@+id/tv_negative_prompt"
                app:layout_constraintTop_toBottomOf="@+id/tv_height_value"
                tools:text="@string/height_width_value" />

            <TextView
                android:id="@+id/tv_sampler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sampler"
                app:layout_constraintEnd_toEndOf="@+id/tv_negative_prompt"
                app:layout_constraintTop_toBottomOf="@+id/tv_width_value" />

            <TextView
                android:id="@+id/tv_sampler_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_steps_value"
                app:layout_constraintEnd_toEndOf="@+id/tv_width_value"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tv_negative_prompt"
                app:layout_constraintTop_toBottomOf="@+id/tv_width_value"
                tools:text="@string/sampler_value" />

            <TextView
                android:id="@+id/tv_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                app:layout_constraintEnd_toEndOf="@+id/tv_negative_prompt"
                app:layout_constraintTop_toBottomOf="@+id/tv_sampler_value" />

            <TextView
                android:id="@+id/tv_steps_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_cfg_value"
                app:layout_constraintEnd_toEndOf="@+id/tv_sampler_value"
                app:layout_constraintStart_toEndOf="@+id/tv_negative_prompt"
                app:layout_constraintTop_toBottomOf="@+id/tv_sampler_value"
                tools:text="@string/steps_value" />

            <TextView
                android:id="@+id/tv_cfg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cfg"
                app:layout_constraintBottom_toBottomOf="@id/cl_info_plate"
                app:layout_constraintEnd_toEndOf="@+id/tv_negative_prompt"
                app:layout_constraintTop_toBottomOf="@+id/tv_steps" />

            <TextView
                android:id="@+id/tv_cfg_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@id/cl_info_plate"
                app:layout_constraintEnd_toEndOf="@+id/tv_steps_value"
                app:layout_constraintStart_toEndOf="@+id/tv_negative_prompt"
                app:layout_constraintTop_toTopOf="@+id/tv_cfg"
                tools:text="@string/cfg_value" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>